--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,17 @@
         android:theme="@style/Theme.DAM2Erronka1Talde2"
         tools:targetApi="31">
         <activity
+            android:name=".register"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
+        <activity
             android:name=".login"
-            android:screenOrientation="portrait"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
