--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,25 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".erreserbaOrdainketa"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
+        <activity
             android:name=".Nire_Kontua"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ErreserbaTxartela"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ErreserbaInfo"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".erreserbak"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".register"
             android:exported="false"
