--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".ErreserbaTxartela"
+            android:exported="false" />
+        <activity
+            android:name=".ErreserbaInfo"
+            android:exported="false" />
+        <activity
             android:name=".erreserbak"
             android:exported="false" />
         <activity
