--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         tools:targetApi="31">
         <activity
             android:name=".PribatasunPolitikak"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".erreserbaOrdainketa"
             android:exported="false"
