--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".erreserbaTxartela"
+            android:name=".erreserbaBukatuta"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
